@@ -21,6 +21,9 @@
 
 TreeTank 4.10.:
 ---------------
++ Binary incompatibility to previous releases due to AbstractPage.
++ Introduced AbstractPage to make pagelayer package code less error prone.
+  AbstractPage replaces IPage.
 + Safely switch between commits.
 + Session makes sure that there is only one session bound to some TreeTank
   file at any time.
